glib: Add missing ":" at the end of some functions documentation

New versions of gir-scanner emit a warning when the : at
the end of the function documentation is not found.

https://bugs.freedesktop.org/show_bug.cgi?id=56218